--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
-theme: jekyll-theme-minimal
+# Add a them
+theme: jekyll-theme-midnight
+# Title the webpage
 title: Chandler Stegen homepage
+#Provide a description
 description: Bookmark this to keep an eye on my project updates!
