--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 # Add a theme
 remote_theme: pages-themes/midnight@v0.2.0
 
-plugins: jekyll-remote-theme # add this line to the plugins list if you already have one
+plugins: 
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 # Title the webpage
 title: Chandler Stegen homepage
 #Provide a description
